--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -25,6 +25,11 @@
   <title></title>
 </head>
 <body>
+  <nav>
+    <% if current_user %>
+      <a href="/logout">Log out</a>
+    <% end %>
+  </nav>
   <%= yield %>
 </body>
 </html>
